<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activity.CreatePrbmActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_splash_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background_prbm"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_prbm"
            android:textColor="@color/Blue"
            android:textSize="28sp"/>


        <LinearLayout
            android:id="@+id/datParent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView1"
            android:orientation="vertical"
            android:padding="8dp">

            <!--<TextView-->
                <!--android:id="@+id/textView8"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:text="@string/prbm_date"-->
                <!--android:textColor="@color/Blue"-->
                <!--android:textSize="18sp"/>-->

            <DatePicker
                android:id="@+id/datDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:calendarViewShown="false"
                android:spinnersShown="false"/>

            <!--<TextView-->
                <!--android:id="@+id/textView9"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:text="@string/prbm_time"-->
                <!--android:textColor="@color/Blue"-->
                <!--android:textSize="18sp"/>-->

            <TimePicker
                android:id="@+id/datTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:text="@string/insert_data_description"
            android:textColor="@color/Blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView3"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:text="@string/title"
            android:textColor="@color/Blue"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView4"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:ems="10"
            android:hint="@string/title_hint"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edtTitle"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:text="@string/authors"
            android:textColor="@color/Blue"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtAuthors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView5"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:ems="10"
            android:hint="@string/authors_hint"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edtAuthors"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:text="@string/place"
            android:textColor="@color/Blue"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView6"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:ems="10"
            android:hint="@string/place_hint"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edtPlace"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:text="@string/note"
            android:textColor="@color/Blue"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView7"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/datParent"
            android:hint="@string/note_hint"
            android:lines="3"
            android:maxLines="3"
            android:minLines="3"
            android:singleLine="false"/>

    </RelativeLayout>
</FrameLayout>